@@ -20,8 +20,9 @@ endif
 
 svg_loader_la_SOURCES = io-svg.c
 svg_loader_la_LDFLAGS = -avoid-version -module $(no_undefined)
-svg_loader_la_LIBADD = $(LIBRSVG_LIBS) \
-	$(LIBGSF_LIBS) $(LIBCROCO_LIBS)\
+svg_loader_la_LIBADD = $(LIBRSVG_LIBS) 	\
+	$(LIBGNOME_VFS_LIBS)		\
+	$(LIBGSF_LIBS) $(LIBCROCO_LIBS)	\
 	$(top_builddir)/librsvg-2.la
 
 loader_LTLIBRARIES = $(target_pixbuf_loader)
